# ESP32-Smart-Weather-Display

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  api.h  ble.h  board_init.c  board_init.h  defines.h  idf_component.yml  main.c  ui.c  ui.h  wifi.h
